finally app well working

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
     <div class="search">
         <input type="text" id="myInput">
-        <button>search</button>
+        <button id="search">search</button>
     </div>
 
     <div class="main">
         <div class="output">
             <div id ="location"></div>
+            <div id="textDisplay"></div>
             <div id ="timeZone"></div>
             <div id ="celciusDisplay"></div>
             <div id="fahneitDisplay"></div>
