--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <met    a name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather app</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +21,7 @@
         <div class="output">
             <div id ="location"></div>
             <div id="textDisplay"></div>
+            <div id="otherInfo"></div>
             <div id ="timeZone"></div>
             <div id ="celciusDisplay"></div>
             <div id="fahneitDisplay"></div>
